--- a/html/002-flipping-card.html
+++ b/html/002-flipping-card.html
@@ -41,9 +41,15 @@
         </div>
       </div>
     </div>
-    <div class="back">Back Side</div>
+    <div class="back">
+      <div class="contact-info">For customer service call +997 43 43 3433 or email at mastercard@gmail.com</div>
+      <div class="magnetic-stripe"></div>
+      <div class="card-code-gradient"></div>
+      <div class="more-card-info">blanditiis fugit possimus laboriosam sit. Quia accusantium tenetur cumque eaque, ex voluptatibus soluta amet fuga ut cupiditate incidunt voluptate ipsum accusamus eius omnis et delectus maxime eligendi. Cupiditate ut, cumque dolore eius labore expedita dolor quas exercitationem sequi id tenetur blanditiis consequuntur?</div>
+      
+    </div>
   </div>
   
-  <script src="../js/general.js"></script>
+  <script src="../js/002-flipping.card.js"></script>
 </body>
 </html>
