--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="./html/001-profile-card.html" class="link" target="_blank">Profile Card</a>
     <a href="./html/002-flipping-card.html" class="link" target="_blank">Flipping Card</a>
     <a href="./html/003-theme-switcher.html" class="link" target="_blank">Theme Switcher</a>
-    <a href="#" class="link" target="_blank">No project yet</a>
+    <a href="./html/004-scroll-animations.html" class="link" target="_blank">Scroll animations</a>
     <a href="#" class="link" target="_blank">No project yet</a>
     <a href="#" class="link" target="_blank">No project yet</a>
     <a href="#" class="link" target="_blank">No project yet</a>
